[package]
name = "json_to_csv"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Convert JSON to CSV"
keywords = ["json to csv", "json2csv", "j2csv", "conversion json to csv"]

[dependencies]
clap = { version = "^4.3", features = ["derive"] }
repair_json = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
